2007-07-08 Applied Carl Worth's patch to fix cairo draw_arc - SC

2007-07-07 fixed bug 1712099: xpdf distiller on windows - DSD

2007-06-30 Applied patches to tkagg, gtk, and wx backends to reduce
           memory leakage.  Patches supplied by Mike Droettboom;
           see tracker numbers 1745400, 1745406, 1745408.
           Also made unit/memleak_gui.py more flexible with
           command-line options. - EF

2007-06-30 Split defaultParams into separate file rcdefaults (together with
           validation code). Some heavy refactoring was necessary to do so,
           but the overall behavior should be the same as before. - NN

2007-06-27 Added MPLCONFIGDIR for the default location for mpl data
           and configuration.  useful for some apache installs where
           HOME is not writable.  Tried to clean up the logic in
           _get_config_dir to support non-writable HOME where are
           writable HOME/.matplotlib already exists - JDH

2007-06-27 Fixed locale bug reported at
           http://sourceforge.net/tracker/index.php?func=detail&aid=1744154&group_id=80706&atid=560720
           by adding a cbook.unicode_safe function - JDH

2007-06-27 Applied Micheal's tk savefig bugfix described at
           http://sourceforge.net/tracker/index.php?func=detail&aid=1716732&group_id=80706&atid=560720
           Thanks Michael!


2007-06-27 Patch for get_py2exe_datafiles() to work with new directory
           layout. (Thanks Tocer and also Werner Bruhin.) -ADS


2007-06-27 Added a scroll event to the mpl event handling system and
           implemented it for backends GTK* -- other backend
           users/developers/maintainers, please add support for your
           backend. - JDH

2007-06-25 Changed default to clip=False in colors.Normalize;
           modified ColorbarBase for easier colormap display - EF

2007-06-13 Added maskedarray option to rc, numerix - EF

2007-06-11 Python 2.5 compatibility fix for mlab.py - EF
